Spacing fixed when the page is scaled smaller

--- a/blog-posts/blog-stylesheet.css
+++ b/blog-posts/blog-stylesheet.css
@@ -50,6 +50,7 @@ img{
 #blog{
   padding-left: 15px;
   padding-bottom: 50px;
+  padding-right:15px;
 }
 #date{
   padding-left:10px;
@@ -69,10 +70,10 @@ a:link,a:visited{
 }
 .bar div{
   text-align: right;
-  font-size: 1.25em;
 }
 
 #signature{
   float:right;
   padding-right:20%;
+  padding-bottom: 50px;
 }
